<resources>
    <string name="app_name">MyEvents</string>
    <string name="app_title_text">My Events</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="log_in_title_text">Sign in</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="user_name_text">User Name</string>
    <string name="confirm_password_text">Please confirm your password:</string>
    <string name="password_condition_text">Password must contain at least 3 characters and combine letters and numbers</string>
    <string name="new_events_title">Upcomming Events</string>
    <string name="my_events_title">My Events</string>
    <string name="new_account_snackbar_text">You now have an account</string>
    <string name="not_matching_passwords_error_Text">Passwords don\'t match</string>
    <string name="password_error">Password is not correct</string>
    <string name="incomplete_fields_toast_text">Incomplete Fields</string>
    <string name="link_to_event_text">Get your tickets now! Click here</string>
    <string name="save_text">Save</string>
    <string name="wrong_text">Might be wrong</string>
    <string name="incomplete_fields_message">Email and password must be completed</string>
    <string name="event_saved_toast_text">Event saved</string>
    <string name="create_a_new_account_title_text">Create a new account</string>
</resources>
