<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bianca.myevents.SignUpActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_keyboard_backspace"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Create a new account"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:background="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:fontFamily="serif"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:inputType="textPersonName"
            android:hint="@string/user_name_text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordTextsignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:hint="@string/password_text"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/password_conditions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_condition_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_text"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:textColor="@color/textGreyColor"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordConfirmText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:hint="@string/password_text"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up_button_text"
        android:background="@drawable/button_style"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/textGreyColor"/>
</LinearLayout>
</ScrollView>
