<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bianca.myevents.SignInActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_keyboard_backspace"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:background="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/log_in_title_text"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:background="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:fontFamily="serif"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/me_inner_logo"
        android:layout_marginTop="30dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/passwordText">

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:hint="@string/password_text"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in_button_text"
        android:background="@drawable/button_style"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/textGreyColor"/>


</LinearLayout>
</ScrollView>